--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:functional": "jest --projects ./test --forceExit --runInBand"
   },
   "keywords": [],
   "author": "Samir Assad",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^17.0.40",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.17.0",
+    "jest": "^28.1.0",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   },
