--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "start": "npm run build && node dist/src/index.js",
     "start:dev": "ts-node-dev ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest",
     "test:functional": "jest --projects ./test --forceExit --runInBand"
   },
   "keywords": [],
   "author": "Samir Assad",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^17.0.40",
@@ -30,6 +32,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
     "module-alias": "^2.2.2"
   }
 }
