--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "rootDirs": ["./src", "./test"],
     "typeRoots": ["node_modules/@types"],
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "useUnknownInCatchVariables": false
   },
   "include": ["./src/**/*.ts", "./test/**/*.ts"],
   "exclude": ["./node_modules/*", "dist"]
